--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-        <title>MIS UI Slideshow with css3</title>
+        <title>NYU EXPERIENCE SLIDES</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta name="description" content="MIS UI Slideshow with CSS3 - A Css-only fullscreen background image slideshow" />
         <meta name="keywords" content="css3, css-only, fullscreen, background, slideshow, images, content" />
@@ -35,8 +35,8 @@
               <div class="clr"></div>
             </div><!--/ Codrops top bar -->
             <header>
-                <h1>ITS <span>Fullscreen Slideshow</span></h1>
-                <h2>An ITS slideshow for background images</h2>
+                <h1><span></span></h1>
+                <h2></h2>
 				<p class="codrops-demos">
 					<a href="home.html">ENTER SITE</a>
 									</p>
